// Vitest Snapshot v1

exports[`matches snapshot defence reaction phase 1`] = `
<div>
  <div
    class="_notScaled_217ff1"
  >
    <div
      class="_phaseWidget_217ff1"
      style="transform: scale(0.8131764705882353);"
    >
      <div
        class="_icon_217ff1"
        style="left: 102.5px;"
      />
    </div>
  </div>
</div>
`;

exports[`matches snapshot main phase 1`] = `
<div>
  <div
    class="_notScaled_217ff1"
  >
    <div
      class="_phaseWidget_217ff1"
      style="transform: scale(0.8131764705882353);"
    >
      <div
        class="_icon_217ff1"
        style="left: 8.5px;"
      />
    </div>
  </div>
</div>
`;
